<resources>
    <string name="app_name">App-Store-Application</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="log_in">Log In</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="sign_in">Sign In</string>
    <string name="or">or</string>
    <string name="or_enter">or Enter</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create_an_account">Create an account</string>
    <string name="search_icon">Search</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="hello_welcome_to_our_app_feel_free_to_get_your_favorite_games">Hello, welcome to our app! Feel free to get your favorite games.</string>
    <string name="let_s_find_you_favorite_games">Let\'s find you favorite games.</string>
    <string name="welcome_good_to_see_you">Welcome good to see you</string>
    <string name="let_s_optimize_your_favorite_games">Let\'s optimize your favorite games</string>
    <string name="add">Add</string>
    <string name="backtohome">BacktoHome</string>
    <string name="back_to_login">Back to Login</string>
    <string name="share">Share</string>
    <string name="game_image">game image</string>
    <string name="game_name">Game Name</string>
    <string name="delete" />
    <string name="edit" />
</resources>