<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".controller.LoginActivity">

    <!-- Sign In Text -->
    <TextView
        android:id="@+id/tvLogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:textStyle="bold|italic"
        android:textSize="28sp"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="170dp" />

    <!-- Rounded Rectangle Button (Continue with Google) -->
    <Button
        android:id="@+id/btnContinueWithGoogle"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/tvLogIn"
        android:layout_marginStart="50sp"
        android:layout_marginTop="30sp"
        android:layout_marginEnd="50sp"
        android:background="@drawable/rounded_button_selectore"
        android:text="@string/continue_with_google"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="italic"
        android:gravity="center_vertical"
        android:drawableEnd="@drawable/ic_google"
        tools:ignore="RtlCompat" />


    <!-- Rounded Rectangle Button (Continue with Facebook) -->
    <Button
        android:id="@+id/btnContinueWithFacebook"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/btnContinueWithGoogle"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50sp"
        android:layout_marginEnd="50sp"
        android:text="@string/continue_with_facebook"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textStyle="italic"
        android:textSize="14sp"
        android:background="@drawable/rounded_button_selectore"
        android:gravity="center_vertical|center_horizontal"
        android:drawableEnd="@drawable/ic_facebook"
         />
    <TextView
        android:id="@+id/tvOrEnter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnContinueWithFacebook"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="@string/or_enter"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/tvEmail"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/tvOrEnter"
        android:layout_marginTop="15dp"
        android:background="@drawable/rounded_button"
        android:hint="@string/Email"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        android:gravity="center_vertical"
        android:drawablePadding="12dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"/>

    <EditText
        android:id="@+id/tvPassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/tvEmail"
        android:layout_marginTop="18dp"
        android:background="@drawable/rounded_button"
        android:textColorHint="@color/white"
        android:hint="@string/password"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:gravity="center_vertical"
        android:drawablePadding="12dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"/>
    <!-- Sign In Button -->
    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/tvPassword"
        android:layout_marginStart="80dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="80dp"
        android:gravity="center"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        android:background="@drawable/rounded_button_2"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/btnSignIn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp">

        <TextView
            android:id="@+id/tvHaveaccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            android:textColor="@android:color/white"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btnCreateAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_an_account"
            android:textStyle="bold|italic"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:background="@android:color/transparent"
            android:padding="0dp"
            android:elevation="0dp"
            android:layout_marginStart="8dp" />
    </LinearLayout>
    <View
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@drawable/eclipse"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="-100dp"
        android:layout_marginTop="-100dp"
        tools:ignore="VisualLintBounds" />

    <View
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@drawable/eclipse"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="-100dp"
        android:layout_marginBottom="-100dp"
        tools:ignore="VisualLintBounds" />




</RelativeLayout>
